--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - About</title>
+  <title>K.T.M. Engineering Consultancy & Construction Pvt. Ltd  - About</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
